test/asm/narg-overwrite.asm
_NARG = 0
_NARG = 0
